<resources>
    <string name="app_name">BP3</string>
    <string name="title_activity_main">MainActivity</string>

    <!--NAVBAR-->
    <string name="title_profile">Profiel</string>
    <string name="title_work">Werk</string>
    <string name="title_events">Events</string>
    <string name="title_projects">Projecten</string>

    <!--TABBAR-->
    <string name="title_activity_tab_bar">TabBar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>


    <!--DRAWER-->
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ICT-Community</string>
    <string name="nav_header_subtitle">De ICT app van Brabant</string>
    <string name="nav_header_desc">ICT-Community</string>


    <!--PROJECTEN-->
    <string name="projecten_opdrachten">Opdrachten</string>
    <string name="projecten_opdrachten_details">Opdracht Details</string>
    <string name="projecten_challenges">Challenges</string>
    <string name="projecten_mystuff">Mijn activiteiten</string>
    <string name="opdracht_toevoegen">Opdracht Toevoegen</string>

    <!-- EVENTS-->
    <string name="events_event">Events</string>
    <string name="event_aanvragen">Events Aanvragen</string>
    <string name="event_page">Evenement</string>
    <string name="event_add">Evenement toevoegen</string>
    <string name="event_addEvent">Vul de gegeven in: </string>
    <string name="event_dropdownsoort">Kies een soort: </string>
    <string name="event_inschrijven">Inschrijven voor evenement</string>
    <string name="event_terugbtn">Terug</string>
    <string name="event_inschrijfbtn">Inschrijven</string>
    <string name="eventpage_naam">Naam: </string>
    <string name="eventpage_soort">Soort: </string>
    <string name="eventpage_datum">Datum: </string>
    <string name="eventpage_locatie">Locatie: </string>
    <string name="eventpage_aantalp">Maximaal aantal personen: </string>
    <string name="eventpage_contact">Orginisator: </string>
    <string name="eventpage_omschrijving">Omschrijving: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholderlesvak">PlaceholderLesvak</string>
    <string name="placeholderbedrijf">placeholderBedrijf</string>
    <string name="placeholderopdrachtnaam">placeholderopdrachtnaam</string>
    <string name="beschikbare_opdrachten">Beschikbare Opdrachten</string>
    <string name="placeholder">placeholder</string>
    <string name="contact">contact</string>
    <string name="teams">Teams</string>
    <string name="team_toevoegen">team toevoegen</string>
    <string name="mijn_activiteiten">Mijn activiteiten</string>
    <string name="mijn_challenges">Mijn challenges</string>
    <string name="mijn_opdrachten">Mijn Opdrachten</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>


    <string-array name="leerjaar_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Meld je aan of registreer</string>
    <string name="action_sign_in_short">Aanmelden</string>
    <string name="wrong_pass">Uw wachtwoord komt niet overeen met de ingevulde email</string>
    <string name="wrong_email">Uw email wordt niet door de database herkend. Heeft u nog geen account? Klik dan op Account Aanmaken.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
<<<<<<< HEAD
    <string name="title_activity_aanmaken_account">AanmakenAccount</string>
=======
    <string name="bekijk">Bekijk</string>
    <string name="bewerken">Bewerken</string>
>>>>>>> 4ea51a7c2966a5270383036dd3ab3700603133b9
</resources>
