<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="563dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/EventbtnInschrijf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="9"
            android:layout_column="0"
            android:text="@string/event_inschrijfbtn" />

        <TextView
            android:id="@+id/textNaamevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/eventpage_naam" />

        <TextView
            android:id="@+id/textSoortevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/eventpage_soort" />

        <TextView
            android:id="@+id/textDatumevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/eventpage_datum"

            />

        <TextView
            android:id="@+id/textLocatieevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/eventpage_locatie"/>

        <TextView
            android:id="@+id/textAantalpevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/eventpage_aantalp"/>
        <TextView
            android:id="@+id/textContactPevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/eventpage_contact" />


        <TextView
            android:id="@+id/textOmschrijvingevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:text="@string/eventpage_omschrijving" />

    </GridLayout>
</android.support.constraint.ConstraintLayout>