<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Profiel">
            <menu>
                <item
                    android:id="@+id/navigation_profile"
                    android:icon="@drawable/ic_profile_24dp"
                    android:title="@string/title_profile" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Work">
            <menu>
                <item
                    android:id="@+id/navigation_work"
                    android:icon="@drawable/ic_work_24dp"
                    android:title="@string/title_work" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Events">
            <menu>
                <item
                    android:id="@+id/navigation_events"
                    android:icon="@drawable/ic_event_24dp"
                    android:title="@string/title_events" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="Events">
            <menu>
                <item
                    android:id="@+id/navigation_projects"
                    android:icon="@drawable/ic_project_24dp"
                    android:title="@string/title_projects" />
            </menu>
        </item>
    </group>



</menu>
