<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <TextView
            android:id="@+id/opdracht_by_lesvak_lesvak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/placeholderlesvak"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/opdracht_by_lesvak_lesvak"
            android:text="@string/placeholderbedrijf"
            android:id="@+id/opdracht_by_lesvak_bedrijf"
            android:maxLines="1"
            android:ellipsize="end"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_below="@id/opdracht_by_lesvak_bedrijf"
            android:text="@string/placeholderopdrachtnaam"
            android:id="@+id/opdracht_by_lesvak_opdrachtnaam"
            android:maxLines="1"
            android:ellipsize="end"
            />
    </RelativeLayout>

</android.support.v7.widget.CardView>