<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <TextView
            android:id="@+id/mijn_activiteiten_docent_opdrachtnaam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/placeholderlesvak"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mijn_activiteiten_docent_opdrachtnaam"
            android:text=""
            android:id="@+id/mijn_activiteiten_docent_lesvak"
            android:maxLines="1"
            android:layout_marginBottom="30dp"
            android:ellipsize="end"
            />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_below="@id/mijn_activiteiten_docent_lesvak"
            android:id="@+id/mijn_activiteiten_docent_edit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/delete"
            android:layout_below="@id/mijn_activiteiten_docent_lesvak"
            android:layout_toEndOf="@id/mijn_activiteiten_docent_edit"/>

       
    </RelativeLayout>

</android.support.v7.widget.CardView>