<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="oa"
            type="com.example.bp3.service.models.OpdrachtAanbod"/>
    </data>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.fragments.Opdracht.OpdrachtAanbodDetails">


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/cards_opdrachtaanbod_include"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                >
                <TextView
                    android:id="@+id/aanbod_bedrijf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aanbod_bedrijf"
                    android:text="@{oa.opdracht.opdrachtNaam}"
                    android:id="@+id/aanbod_opdrachtnaam"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingBottom="30dp"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aanbod_opdrachtnaam"
                    android:backgroundTint="#0336FF"
                    android:textColor="#FFFFFF"
                    android:text="@string/contact"
                    android:id="@+id/aanbod_contact"
                    />

                <TextView
                    android:paddingTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aanbod_contact"
                    android:text="@{oa.beschrijving}"
                    android:id="@+id/aanbod_beschrijving"
                    />

                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aanbod_beschrijving"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text=""
                    android:id="@+id/aanbod_deadline"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cards_opdrachtaanbod_include"
            android:text="@string/teams"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/opdrachtaanbod_title"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/opdrachtaanbod_teams_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/opdrachtaanbod_title"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/opdrachtaanbod_teams_recycler"
            android:backgroundTint="#0336FF"
            android:textColor="#FFFFFF"
            android:text="@string/team_toevoegen"
            android:id="@+id/team_add_button"
            />

    </RelativeLayout>
</layout>

